--- a/templates/base.html
+++ b/templates/base.html
@@ -3,40 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <title>{% block title %} Блог {% endblock %}</title>
+    <link rel="stylesheet" href="/static/styles.css">
 </head>
 <body>
-    <nav class="navbar">
-        <div>
-            <a href="{% url 'main' %}">Главная</a>
-            {% if user.is_authenticated %}
-            <a href="{% url 'user_posts' %}">Мои посты</a>
-            {% endif %}
-        </div>
-        <div>
-            {% if user.is_authenticated %}
-                <span>Привет, {{ user.username }}</span>
-                <form method='post' action="{% url 'logout' %}">
-                    {% csrf_token %}
-                    <button type="submit">Выйти</button>
-                </form>
-            {% else %}
-                <a href="{% url 'login' %}">Войти</a>
-                <a href="{% url 'signup' %}">Зарегистрироваться</a>
-            {% endif %}
-        </div>
-    </nav>
-
-    <div class="content">
-        {% if messages %}
-            <ul class="messages">
-                {% for message in messages %}
-                    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-                {% endfor %}
-            </ul>
+<div class="navbar">
+    <div class="tabs">
+        <a class="tab" id="maintab" href="{% url 'main' %}">Главная</a>
+        {% if user.is_authenticated %}
+            <a class="tab" href="{% url 'user_posts' %}">Мои посты</a>
+            <a class="tab" href={% url 'add' %}>&#10010;</a>
         {% endif %}
-
-        {% block content %}
-        {% endblock %}
     </div>
+    <div class="profile">
+        {% if user.is_authenticated %}
+            <span>Привет, {{ user.username }}</span>
+            <form method='post' action="{% url 'logout' %}">
+                {% csrf_token %}
+                <button type="submit">Выйти</button>
+            </form>
+        {% else %}
+            <button>
+                <a class="link" href="{% url 'login' %}">Войти</a>
+            </button>
+            <button>
+                <a class="link" href="{% url 'signup' %}">Зарегистрироваться</a>
+            </button>
+        {% endif %}
+    </div>
+</div>
+
+<div class="content">
+    {% if messages %}
+        <ul class="messages">
+            {% for message in messages %}
+                <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+            {% endfor %}
+        </ul>
+    {% endif %}
+
+    {% block content %}
+    {% endblock %}
+</div>
 </body>
 </html>
