--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Вход</title>
+    <link rel="stylesheet" href="/static/styles.css">
 </head>
 <body>
     <h1>Вход</h1>
-    <form method="post">
+    <form class="link" method="post">
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit">Войти</button>
