--- a/templates/main.html
+++ b/templates/main.html
@@ -5,11 +5,36 @@
 {% block content %}
     <ul>
         {% for post in posts %}
-            {% if post.status == 'published' %}
-                <p>{{ post.author.username }}</p>
-                <p>{{ post.title }} - {{ post.date }}</p>
-                <p>{{ post.content }}</p>
-            {% endif %}
+            <div class="feed">
+                {% if post.status == 'published' %}
+                    <div class="post">
+                        <span class="post-title">{{ post.title|slice:50 }}</span>
+                        <span class="post-date">{{ post.date }}</span>
+                        <span class="post-content">{{ post.content|slice:100 }}</span>
+                        <span class="post-author">Автор: {{ post.author.username }}</span>
+                        <button>
+                            <a class="link" href={% url 'details' post_id=post.id %}>Подробнее</a>
+                        </button>
+                    </div>
+                {% endif %}
+            </div>
         {% endfor %}
     </ul>
+    <div class="pagination">
+        <span>
+            {% if posts.has_previous %}
+                <a href="?page=1"><<</a>
+                <a href="?page={{ posts.previous_page_number }}"><</a>
+            {% endif %}
+        </span>
+
+        <span class="active">
+            {{ posts.number }} из {{ posts.paginator.num_pages }}
+        </span>
+
+         {% if posts.has_next %}
+                <a href="?page={{ posts.next_page_number }}">></a>
+                <a href="?page={{ posts.paginator.num_pages }}">>></a>
+         {% endif %}
+    </div>
 {% endblock %}
